--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "websocket-core",
+  "name": "websocketcore",
   "version": "1.0.0",
   "description": "Websocket framework with async auth, json-messages, user model, automatic ping-pong and more",
   "main": "WebSocketCore.js",
